@@ -1,4 +1,4 @@
-See also http://www.sacredchao.net/quodlibet/wiki/Development for
+See also http://code.google.com/p/quodlibet/wiki/Development for
 various proposals/roadmaps/guides.
 
 Source Layout - quodlibet/
@@ -38,7 +38,7 @@ latest trunk using `svn switch' and `svn update'.
 
 Translation
 -----------
-http://www.sacredchao.net/quodlibet/wiki/Development/Translation is
+http://code.google.com/p/quodlibet/wiki/Development_Translation is
 a detailed guide to handling translation. Don't be afraid to ask for
 help on IRC or the mailing list.
 
@@ -54,10 +54,10 @@ Submitting
 If your patch fixes a known bug with a ticket, you should attach it to
 the ticket directly. If it is a bug fix but doesn't have a ticket, you
 can either make a ticket to attach it to, or send it to the mailing list,
-quodlibet@lists.sacredchao.net.
+quod-libet-development@googlegroups.com.
 
-The ticket tracker is at http://www.sacredchao.net/quodlibet/report
-and at http://www.sacredchao.net/quodlibet/newticket.
+The ticket tracker is at http://code.google.com/p/quodlibet/issues/list
+and at http://code.google.com/p/quodlibet/issues/entry.
 
 Guidelines
 ----------
