@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 # Copyright 2004-2005 Joe Wreschnig, Niklas Janlert
-# <quodlibet@lists.sacredchao.net>
+# <quod-libet-development@googlegroups.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2 as
