@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 
 # Copyright 2004-2005 Joe Wreschnig, Michael Urman, Iñigo Serna
-# <quodlibet@lists.sacredchao.net>
+# <quod-libet-development@googlegroups.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2 as
